--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,10 @@
 [BROWSER]
 
 # Type Firefox or Chrome (Case Insensitive)
-Browser = Chrome
+Browser = Firefox
 
 # Chrome Web Driver Path (Doesn't matter to Firefox users)
-Chrome_PATH = C:\Program Files (x86)\chromedriver.exe
+Chrome_PATH = your_path
 
 #----------------------------------------------
 
